# python-ai-demo

./: .env.example  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: concepts_learned.md  getting_started.md  graphiti_knowledge_graph_integration.md  learning_progress.md  phase7_incomplete_status.md  project_overview.md  session_2025_01_13_embeddings_milestone.md  session_2025_11_30_rag_chromadb.md  session_2025_12_11_phase4_agents.md  session_2025_12_13_agent_concepts.md  session_2025_12_13_code_cleanup.md  session_2025_12_20_llmlingua2_deep_dive.md  session_2025_12_30_phase1_scaffold.md  session_2026_01_13_phase7_start.md  session_2026_01_17_memory_module.md  session_2026_01_17_rag_module.md  session_2026_01_18_agents_tools_module.md  session_2026_01_18_rag_visual_diagrams.md  session_2026_01_18_visual_documentation_enhancement.md  session_2026_01_21_langchain_api_modernization.md  session_2026_02_05_interactive_menus.md  session_2026_02_06_langchain_cleanup.md  session_2026_02_07_demo_menu_migration.md  session_2026_02_08_agents_tools_progress.md  session_2026_02_14_graphiti_automation_workflow.md  session_2026_02_14_graphiti_exploration.md  session_2026_02_25_code_quality.md  session_2026_02_25_embeddings_module.md  session_2026_02_26_pydantic_ai_module.md
chroma_rag_db/: chroma.sqlite3
common/: __init__.py  demo_menu.py
common/util/: __init__.py  utils.py
docs/concepts/: ai_application_flow.md  ai_development_taxonomy.md  rag_explained.md
phase1_foundations/: README.md
phase1_foundations/01_numpy_basics/: README.md  examples.py  exercises.py
phase1_foundations/02_pandas_basics/: README.md  examples.py  exercises.py
phase1_foundations/03_ml_concepts/: README.md  examples.py
phase1_foundations/playground/: README.md
phase2_llm_fundamentals/: README.md
phase2_llm_fundamentals/01_prompt_engineering/: README.md  examples.py
phase2_llm_fundamentals/02_api_integration/: README.md  examples.py  live_examples.py
phase3_llm_applications/: README.md
phase4_ai_agents/: CONCEPTS.md  README.md
phase5_production/: README.md
phase6_model_customization/: README.md
phase7_frameworks/: README.md  __init__.py  utils.py
tests/: test_demo_menu.py
(+151 files in other folders)
